# CommandoPP

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: Bullet.hpp  Dude.hpp  Entity.hpp  EntityManager.hpp  EventDispatcher.hpp  GameMath.hpp  HUD.hpp  Joe.hpp  Observer.hpp  PlayState.hpp  Weapon.hpp  WeaponSystem.hpp  utils.hpp
include/events/: AddEntity.hpp  CollisionEvent.hpp  Event.hpp  EventDispatcher.hpp  FireEvent.hpp  GameEvent.hpp  MObjectInView.hpp  MapObjectEvent.hpp  Observer.hpp  PlaySoundEvent.hpp
include/systems/: CollisionSystem.hpp  EnemySpawnSystem.hpp  RespawnSystem.hpp  SoundSystem.hpp
resources/animations/: dude.xml  joe.xml
resources/levels/: level1.tmx
src/: Bullet.cpp  Dude.cpp  Entity.cpp  EntityManager.cpp  EventDispatcher.cpp  HUD.cpp  Joe.cpp  PlayState.cpp  Weapon.cpp  WeaponSystem.cpp
src/events/: CollisionEvent.cpp  EventDispatcher.cpp  FireEvent.cpp  GameEvent.cpp  MObjectInView.cpp  MapObjectEvent.cpp  PlaySoundEvent.cpp
src/systems/: CollisionSystem.cpp  EnemySpawnSystem.cpp  RespawnSystem.cpp  SoundSystem.cpp  WeaponSystem.cpp
